changed UI and fixed errors in. repo

--- a/index.html
+++ b/index.html
@@ -1,17 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <title>Hacktoberfest2019 - Portfolio</title>
-  </head>
-  <body>
-    <h1>Benny Carlsson</h1>
-    <p>
-      This is my Portfolio.
-    </p>
-    <p>
-      It's not much but with your help it can turn into something hideously
-      beautiful!
-    </p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+</head>
+<body>
+
+<div class="container">
+    <header>
+        <h1>My Name</h1>
+        <p>Web Developer</p>
+    </header>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>HTML, CSS, JavaScript</li>
+            <li>React.js</li>
+            <li>Node.js</li>
+            <!-- ... other skills -->
+        </ul>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+            <h3>Project 1</h3>
+            <p>Description of project 1.</p>
+            <a href="#">Link to project 1</a>
+        </div>
+        <div class="project">
+            <h3>Project 2</h3>
+            <p>Description of project 2.</p>
+            <a href="#">Link to project 2</a>
+        </div>
+        <!-- ... other projects -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: myemail@example.com</p>
+        <p>LinkedIn: <a href="#">My LinkedIn Profile</a></p>
+    </section>
+</div>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</body>
 </html>
